[#16] controlled vocabulary for project tags
